--- a/gitHubClient/Base.lproj/Main.storyboard
+++ b/gitHubClient/Base.lproj/Main.storyboard
@@ -25,7 +25,6 @@
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qpE-QN-AcW"/>
-                                    <segue destination="o7K-JG-BQG" kind="show" id="Z7g-dL-0Eo"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oR8-LP-1A8">
@@ -93,13 +92,13 @@
         <!--Search-->
         <scene sceneID="a6d-UO-ONu">
             <objects>
-                <viewController id="o7K-JG-BQG" customClass="UserViewController" customModule="gitHubClient" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserViewController" id="o7K-JG-BQG" customClass="UserViewController" customModule="gitHubClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZTv-Fy-trF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCy-M6-ck1">
-                                <rect key="frame" x="138.66666666666666" y="513" width="136.99999999999997" height="41"/>
+                                <rect key="frame" x="138.66666666666666" y="469" width="136.99999999999997" height="41"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="Start search"/>
                                 <connections>
@@ -108,7 +107,7 @@
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Zve-QQ-GLp">
-                                <rect key="frame" x="119.66666666666669" y="450" width="175" height="32"/>
+                                <rect key="frame" x="119.66666666666669" y="406" width="175" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="175" id="Kvs-sR-vfq"/>
                                 </constraints>
@@ -121,7 +120,7 @@
                                 </connections>
                             </segmentedControl>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="repository name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gdk-hG-ePH">
-                                <rect key="frame" x="77" y="318" width="260" height="34"/>
+                                <rect key="frame" x="77" y="274" width="260" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -131,7 +130,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="language" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qw5-lA-K4I">
-                                <rect key="frame" x="77" y="384" width="260" height="34"/>
+                                <rect key="frame" x="77" y="340" width="260" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -141,7 +140,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="not-found" translatesAutoresizingMaskIntoConstraints="NO" id="blI-Dt-Ubr">
-                                <rect key="frame" x="133" y="138" width="148" height="148"/>
+                                <rect key="frame" x="133" y="94" width="148" height="148"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="148" id="aIl-Km-z1r"/>
                                     <constraint firstAttribute="width" constant="148" id="ygU-QS-R8C"/>
@@ -153,7 +152,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dso-Mc-AWq">
-                                <rect key="frame" x="83" y="81" width="248" height="35"/>
+                                <rect key="frame" x="83" y="37" width="248" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="248" id="8aw-lT-jhR"/>
                                     <constraint firstAttribute="height" constant="35" id="jPV-Ya-7v2"/>
@@ -203,11 +202,11 @@
             <objects>
                 <viewController storyboardIdentifier="RepositoriesViewController" id="rmI-NW-EuD" customClass="RepositoriesViewController" customModule="gitHubClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EQ-g7-FtZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9VP-gB-la2">
-                                <rect key="frame" x="0.0" y="78" width="414" height="658"/>
+                                <rect key="frame" x="0.0" y="34" width="414" height="682"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepositoriesTableViewCell" rowHeight="137" id="lDY-pH-BRU" customClass="RepositoriesTableViewCell" customModule="gitHubClient" customModuleProvider="target">
@@ -289,7 +288,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repositories found: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsN-JY-buE">
-                                <rect key="frame" x="0.0" y="44" width="414" height="34"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="KB5-lE-XYg"/>
                                 </constraints>
